package com.esfe.sistemagimnasio.models;

public class Cliente {
}
