@startuml Diagrama_Base_Datos_Gestion_Gimnasio

' ==============================================================================
' CONFIGURACIÓN VISUAL Y ORIENTACIÓN
' ==============================================================================
left to right direction

hide circle
skinparam linetype ortho
skinparam roundcorner 10
skinparam shadowing false

skinparam entity {
  BackgroundColor #F9F9F9
  HeaderBackgroundColor #E2E8E4
  BorderColor #666666
  FontName Arial
  FontSize 12
  AttributeFontSize 11
}

!define primary_key(x) <b><color:#b8860b><&key></color> x</b>
!define foreign_key(x) <color:#4682b4><&key></color> x
!define column(x) <color:#333333>x</color>

' ==============================================================================
' MÓDULOS DEL SISTEMA
' ==============================================================================

package "Módulo de Usuarios y Roles" {
  entity "usuarios" as usuario {
    primary_key(id) : INT AUTO_INCREMENT
    --
    column(nombres) : VARCHAR(100) NOT NULL
    column(apellidos) : VARCHAR(100) NOT NULL
    column(dui) : VARCHAR(10) UNIQUE NOT NULL
    column(correo) : VARCHAR(150) UNIQUE NOT NULL
    column(contrasena) : VARCHAR(255) NOT NULL
    column(telefono) : VARCHAR(15)
    column(estado) : ENUM('Activo', 'Inactivo') DEFAULT 'Activo'
    column(rol) : ENUM('Cliente', 'Entrenador', 'Administrador') NOT NULL
  }

  entity "clientes" as cliente {
    primary_key(usuario_id) : INT <<FK>>
    --
    foreign_key(entrenador_id) : INT <<FK, Nullable>>
    column(fecha_nacimiento) : DATE NOT NULL
    column(sexo) : VARCHAR(10)
    column(direccion) : TEXT
    column(codigo_qr) : VARCHAR(255) UNIQUE
  }

  entity "entrenadores" as entrenador {
    primary_key(usuario_id) : INT <<FK>>
    --
    column(especialidad) : VARCHAR(100)
  }

  entity "administradores" as administrador {
    primary_key(usuario_id) : INT <<FK>>
  }
}

package "Módulo de Membresías y Pagos" {
  entity "membresias" as membresia {
    primary_key(id) : INT AUTO_INCREMENT
    --
    column(nombre) : VARCHAR(100) NOT NULL
    column(precio) : DECIMAL(10,2) NOT NULL
    column(duracion_dias) : INT NOT NULL
    column(estado) : ENUM('Activo', 'Inactivo') DEFAULT 'Activo'
  }

  entity "membresias_asignadas" as membresia_asignada {
    primary_key(id) : INT AUTO_INCREMENT
    --
    foreign_key(cliente_id) : INT <<FK>> NOT NULL
    foreign_key(membresia_id) : INT <<FK>> NOT NULL
    column(fecha_inicio) : DATE NOT NULL
    column(fecha_vencimiento) : DATE NOT NULL
    column(estado) : ENUM('Vigente', 'Vencida') DEFAULT 'Vigente'
  }

  entity "pagos" as pago {
    primary_key(id) : INT AUTO_INCREMENT
    --
    foreign_key(cliente_id) : INT <<FK>> NOT NULL
    foreign_key(membresia_asignada_id) : INT <<FK>> NOT NULL
    column(monto) : DECIMAL(10,2) NOT NULL
    column(fecha) : DATETIME DEFAULT CURRENT_TIMESTAMP
    column(metodo_pago) : VARCHAR(50) NOT NULL
    column(numero_comprobante) : VARCHAR(100) UNIQUE NOT NULL
  }
}

package "Módulo de Asistencia" {
  entity "asistencias" as asistencia {
    primary_key(id) : INT AUTO_INCREMENT
    --
    foreign_key(cliente_id) : INT <<FK>> NOT NULL
    column(fecha_hora) : DATETIME DEFAULT CURRENT_TIMESTAMP
    column(autorizado) : BOOLEAN DEFAULT TRUE
  }
}

package "Módulo de Rutinas y Ejercicios" {
  entity "rutinas" as rutina {
    primary_key(id) : INT AUTO_INCREMENT
    --
    foreign_key(cliente_id) : INT <<FK>> NOT NULL
    foreign_key(entrenador_id) : INT <<FK>> NOT NULL
    column(fecha_creacion) : DATE NOT NULL
    column(fecha_modificacion) : DATE
  }

  entity "ejercicios" as ejercicio {
    primary_key(id) : INT AUTO_INCREMENT
    --
    column(nombre) : VARCHAR(100) NOT NULL
    column(descripcion) : TEXT
    column(grupo_muscular) : VARCHAR(50) NOT NULL
    column(nivel_dificultad) : ENUM('Principiante', 'Intermedio', 'Avanzado') NOT NULL
    column(imagen) : VARCHAR(255)
  }

  entity "rutina_ejercicios" as rutina_ejercicio {
    primary_key(id) : INT AUTO_INCREMENT
    --
    foreign_key(rutina_id) : INT <<FK>> NOT NULL
    foreign_key(ejercicio_id) : INT <<FK>> NOT NULL
    column(series) : INT NOT NULL
    column(repeticiones) : INT NOT NULL
    column(tiempo_descanso) : INT
    column(observaciones) : TEXT
  }
}

package "Módulo de Progreso y Reportes" {
  entity "progresos" as progreso {
    primary_key(id) : INT AUTO_INCREMENT
    --
    foreign_key(cliente_id) : INT <<FK>> NOT NULL
    foreign_key(entrenador_id) : INT <<FK>> NOT NULL
    column(fecha) : DATE NOT NULL
    column(peso) : DECIMAL(5,2) NOT NULL
    column(estatura) : DECIMAL(3,2) NOT NULL
    column(porcentaje_grasa_corporal) : DECIMAL(4,2)
    column(observaciones) : TEXT
  }

  entity "reportes" as reporte {
    primary_key(id) : INT AUTO_INCREMENT
    --
    foreign_key(administrador_id) : INT <<FK>> NOT NULL
    column(tipo) : VARCHAR(100) NOT NULL
    column(fecha_generacion) : DATETIME DEFAULT CURRENT_TIMESTAMP
  }
}

' ==============================================================================
' RELACIONES CON PALABRAS DESCRIPTIVAS CORTAS (Lectura Izquierda -> Derecha)
' ==============================================================================

' Herencia / Tipos
usuario ||--o| cliente : define
usuario ||--o| entrenador : define
usuario ||--o| administrador : define

' Membresías y Pagos
membresia ||--o{ membresia_asignada : otorga
cliente ||--o{ membresia_asignada : adquiere
cliente ||--o{ pago : realiza
membresia_asignada ||--o{ pago : liquida

' Asistencia
cliente ||--o{ asistencia : registra

' Asignación
entrenador ||--o{ cliente : atiende

' Rutinas y Ejercicios
entrenador ||--o{ rutina : diseña
cliente ||--o{ rutina : recibe
rutina ||--|{ rutina_ejercicio : contiene
ejercicio ||--|{ rutina_ejercicio : compone

' Progreso
entrenador ||--o{ progreso : evalúa
cliente ||--o{ progreso : registra

' Reportes
administrador ||--o{ reporte : genera

@enduml
